# pdf-chinese-font-fixer

./: .gitignore  App.tsx  GEMINI.md  README.md  deploy.sh  index.html  metadata.json  mise.toml  package.json  types.ts
.agent/workflows/: build.md  dev.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  contact.py  models.py  schemas.py
backend/app/routers/: auth.py  contact.py  files.py  webhooks.py
backend/app/services/: gemini_service.py  oauth_service.py  payment_service.py
backend/app/utils/: __init__.py  security.py
backend/scripts/: verify_contact.py
components/: ApiKeySelector.tsx  ImagePreviewModal.tsx  PricingModal.tsx  ProcessingQueue.tsx  SessionSidebar.tsx
deploy/: backend.service  nginx.conf
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/app/: ApiKeySelector.tsx  ImagePreviewModal.tsx  PdfFixerApp.tsx  ProcessingQueue.tsx  SessionSidebar.tsx
frontend/src/components/auth/: LoginButton.tsx
frontend/src/i18n/: en.json  index.ts  zh.json
frontend/src/pages/: AppPage.tsx  ContactPage.tsx  LandingPage.tsx  PricingPage.tsx  PrivacyPage.tsx  RefundPage.tsx  TermsPage.tsx
frontend/src/services/: api.ts  geminiService.ts  pdfService.ts  pptService.ts  storageService.ts  zipService.ts
services/: geminiService.ts  imageService.ts  pdfService.ts  pptImportService.ts  pptService.ts  storageService.ts  zipService.ts
(+3 files in other folders)
